resources/assets/sass/_responsive.scss
@media (min-width: 993px) {
    .row-posts {
        clear: both;
    }
}

@media (min-width: 992px) {
    .modal-sm {
        max-width: 840px !important;
    }
    .candidate-filters {
        margin-top: 66px;
    }
    .hirer p {
        line-height: 27.9px;
    }
}

@media (min-width: 768px) {
    .subnav.nav.navbar-nav li:first-child a {
        padding-left: 0;
    }
    .modal-sm {
        max-width: 600px !important;
    }

    body{
        header.main-header,
        header.main-header .logo,
        header.main-header .navbar{
            float: left;
            .nav>li>a{
                padding: 15px 20px;
            }
        }

        header.main-header{
            .logo{
                width: 20%;
            }
        }
    }
    body.schedule-meeting
    {
        overflow: hidden;
        .calendly-inline-widget
        {
            padding-top: 130px;
        }
        footer
        {
            position: absolute;
            bottom: 0;
        }
    }

}

@media (min-width: 768px) and (max-width: 992px) {
    
    /*Blog Adjustments*/

        .row-posts {
            clear: none;
        }
        .listing-clearfix {
            clear: both;
        }
}

@media (max-width: 1280px){
    body{
        .banner{
            .arrow-cta{
                display: none;
            }
        }
    }
}

@media (max-width: 1199px) {
    .container {
        width: 100% !important;
    }
}

@media (max-width: 1024px) {
    .video-block {
        padding-bottom: 50%;
    }
    .register .banner{
        background-size: cover;
    }
    .banner h2
    {
        margin: 20px 0;
    }
    .text-wrapper
    {
        p
        {
            font-size: 11px;
        }
    }
    .navbar-header {
      float: none;
  }
  .navbar-left,.navbar-right {
      float: none !important;
  }
  .navbar-toggle {
      display: block;
      margin-top: 50px;
  }
  .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-fixed-top {
      top: 0;
      border-width: 0 0 1px;
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
      margin-top: 7.5px;
  }
  .navbar-nav>li {
      float: none;
  }
  .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .collapse.in{
      display:block !important;
  }


}

@media (min-width: 768px) and (max-width: 1024px)
{
    .tags .label-primary
    {
        font-size: 9px;
        width: 100%;
        display: block;
        margin-bottom: 5px;
        word-break: break-word;
        white-space: normal;
  }
}

@media (max-width: 991px){

      // Backend Top Nav

        body{
            .top-nav{
                ul{
                    padding: 0;
                    text-align: center;
                    li{
                        margin-right: 2px;
                        padding: 4px 6px;
                        .fa{
                            font-size: 12px;
                        }
                    }
                }
            }
            .full-width-three-col .how-works-item{
                margin-bottom: 30px;
            }
        }

      // How it Works

        .work-step{
            padding-left: 15px;
            padding-right: 15px;
            br{
                display: none;
            }
            p{
                font-size: 14px;
                line-height: 18px;
            }
        }
        .parallelogram{
            width: 91%;
        }
        .cookie-background{
            width: 50%;
        }
}
/* ... */

